--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "history": "^5.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.0.0-beta.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
